addition for server function

--- a/server/cpp/Makefile
+++ b/server/cpp/Makefile
@@ -1,17 +1,19 @@
-
 CPP = gcc
 CPPFLAGS = -Wall -O0 -g
 LDFLAGS = -lboost_thread -lboost_system -lpthread -lpng -ljpeg -g
-OBJS = mockserver.o
+INCLUDE = -I./include
+OBJS = mockserver.o sexpr.o
 MSERVER = mserver
 
 mserver: $(OBJS)
 	$(CPP) $(LDFLAGS) -o $(MSERVER) $(OBJS)
 
 .cpp.o:
-	$(CPP) $(CPPFLAGS) -c $<
+	$(CPP) $(CPPFLAGS) $(INCLUDE) -c $<
 
 clean:
 	rm -f *.o
 	rm -f $(MSERVER)
 
+sexpr.o: include/sexpr.h
+mockserver.o: include/sexpr.h
