few addition to add VNC client functions

--- a/server/cpp/Makefile
+++ b/server/cpp/Makefile
@@ -2,7 +2,7 @@ CPP = g++
 CPPFLAGS = -Wall -O0 -g
 LDFLAGS = -lboost_thread -lboost_system -lpthread -lpng -ljpeg -g
 INCLUDE = -I./include
-OBJS = mockserver.o sexpr.o
+OBJS = mockserver.o sexpr.o rfbproto.o vncsockets.o global.o vncauth.o d3des.o socket.o
 MSERVER = mserver
 
 mserver: $(OBJS)
@@ -18,3 +18,10 @@ clean:
 
 sexpr.o: include/sexpr.h
 mockserver.o: include/sexpr.h
+d3des.o: include/d3des.h
+global.o: include/global.hpp
+vncauth.o: include/global.hpp include/vncauth.h
+socket.o: include/global.hpp include/socket.hpp
+rfbproto.o: include/global.hpp include/rfbproto.hpp
+vncsockets.o: include/global.hpp include/vncsockets.hpp include/socket.hpp
+
