--- a/server/cpp/Makefile
+++ b/server/cpp/Makefile
@@ -1,8 +1,8 @@
 CPP = g++
 CPPFLAGS = -Wall -O0 -g
-LDFLAGS = -lboost_thread -lboost_system -lpthread -lpng -ljpeg -g
+LDFLAGS = -lboost_thread -lboost_system -lpthread -lpng -ljpeg -lX11 -g
 INCLUDE = -I./include
-OBJS = mockserver.o sexpr.o rfbproto.o vncsockets.o global.o vncauth.o d3des.o socket.o
+OBJS = mockserver.o sexpr.o rfbproto.o vncsockets.o global.o vncauth.o d3des.o socket.o vncclient.o
 MSERVER = mserver
 
 mserver: $(OBJS)
@@ -24,4 +24,5 @@ vncauth.o: include/global.hpp include/vncauth.h
 socket.o: include/global.hpp include/socket.hpp
 rfbproto.o: include/global.hpp include/rfbproto.hpp
 vncsockets.o: include/global.hpp include/vncsockets.hpp include/socket.hpp
+vncclient.o: include/global.hpp include/vncclient.hpp
 
