Now, This code can establish vnc connection with VNC server

--- a/server/cpp/Makefile
+++ b/server/cpp/Makefile
@@ -2,7 +2,7 @@ CPP = g++
 CPPFLAGS = -Wall -O0 -g
 LDFLAGS = -lboost_thread -lboost_system -lpthread -lpng -ljpeg -lX11 -g
 INCLUDE = -I./include
-OBJS = mockserver.o sexpr.o rfbproto.o vncsockets.o global.o vncauth.o d3des.o socket.o vncclient.o
+OBJS = mockserver.o sexpr.o rfbproto.o vncsockets.o global.o vncauth.o d3des.o socket.o vncclient.o genrand.o ImgTile.o
 MSERVER = mserver
 
 mserver: $(OBJS)
@@ -16,6 +16,8 @@ clean:
 	rm -f $(MSERVER)
 	rm -f *.png
 
+ImgTile.o: include/vncclient.hpp
+genrand.o: include/genrand.hpp
 sexpr.o: include/sexpr.hpp
 mockserver.o: include/sexpr.hpp
 d3des.o: include/d3des.h
