pics directory is automatically mkdir-ed

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -9,3 +9,6 @@ dist_voxycli_DATA = \
 	voxyview.css \
 	voxyview.html \
 	voxyview.js
+
+install-data-local:
+	mkdir -p $(datadir)/voxy/pub_www/pics
